# mlx-vector-db

./: .env.example  ARCHIVE_NOTICE.md  LICENSE  README.md  README_original.md  debug_api_keys.py  demo.py  enterprise_demo.py  large_scale_benchmark.py  main.py  performance_demo.py  performance_demo.py.backup  performance_demo_api.py  performance_demo_hnsw.py  pyproject.toml  quick_test.py  requirements-benchmarks.txt  requirements-dev.txt  requirements.txt  run_demos_cli.py  setup.py  simple_test.py  sprint3_demo.py  test_admin_auth.py  utils.py  vector_service_pb2.py  vector_service_pb2.pyi  vector_service_pb2_grpc.py  working_test_fixed.py
api/: __init__.py
api/middleware/: rate_limiting.py
api/routes/: admin.py  admin_routes.py  auth_routes.py  batch_v1.py  monitoring.py  performance.py  vectors.py
benchmarks/: benchmark_app.py  e2e_benchmark.py  e2e_model_comparison.py  large_scale_benchmark.py
clustering/: clustering_manager.py
config/: settings.py
core/: logging_config.py
examples/: mlx_native_example.py
gRPC/: vector_service.proto
integrations/: embedding-modells.txt  mlx_lm_pipeline.py
monitoring/: dashboard.py  metrics.py
performance/: hnsw_index.py  mlx_optimized.py  optimized_vector_store.py  vector_cache.py
sdk/python/: mlx_vector_client.py  mlx_vector_db_client.py
security/: auth.py  rbac.py
service/: __init__.py  models.py  optimized_vector_store.py  production_integration.py  service_handling.py  vector_store.py
sprint3_mlx_lm_demo/: metadata.jsonl  vectors.npz
telemetry/: tracing.py
temp_hnsw_perf_tests/build_test_store_1000/: vectors.npz.tmp.npz
test_query_store/: metadata.jsonl
tests/: demo.py  performance_demo_hnsw.py  quick_test.py  simple_test.py  sprint3_demo.py  test_admin_zip_io.py  test_hnsw_index.py  test_integration.py  test_vector_logic.py  test_vector_store.py  working_test_fixed.py
