[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-vector-db"
version = "1.0.0"
authors = [{name = "Theseus-AT"}]
description = "High-Performance Vector Database optimized for Apple Silicon with MLX"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
keywords = [
    "vector-database", "mlx", "apple-silicon", 
    "machine-learning", "similarity-search", "embeddings"
]
dependencies = [
    "mlx>=0.25.2",
    "numpy>=1.26.0", 
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0"
]

[project.scripts]
mlx-vector-db = "main:app"
